crates/toml/tests/snapshots/invalid/float/leading-dot-plus.stderr
TOML parse error at line 1, column 20
  |
1 | leading-dot-plus = +.12345
  |                    ^
invalid mantissa, expected digits

---
TOML parse error at line 1, column 20
  |
1 | leading-dot-plus = +.12345
  |                    ^^^^^^^
invalid float, expected nothing
